test/StringProcessing/Sema/regex_literal_availability.code
// RUN: %target-typecheck-verify-language -enable-bare-slash-regex -target %target-cpu-apple-macosx12.0

// REQUIRES: language_language_parser
// REQUIRES: OS=macosx

_ = /x/ // expected-error {{'Regex' is only available in}}
// expected-note@-1 {{add 'if #available' version check}}

_ = #/x/# // expected-error {{'Regex' is only available in}}
// expected-note@-1 {{add 'if #available' version check}}

if #available(CodiraStdlib 5.7, *) {
  _ = /x/
  _ = #/x/#
}
